--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -7,7 +7,10 @@
       <a href="/contact">Contact</a>
     </li>
     <li>
-      <a href="/products">Produits</a>
+      <a href="/products/list">Produits</a>
+    </li>
+    <li>
+      <a href="/newsletter/subscribe">Newsletter</a>
     </li>
   </ul>
 </nav>
